--- a/blogpost.html
+++ b/blogpost.html
@@ -55,6 +55,7 @@
                 <p>Eden Verdugo</p>
                 <p>Alex Abel Lerman</p>
                 <p>Víctor Landa</>
+                <p>Eduardo Rodriguez</p>
             </div>
 
             <div id="footer">
